# auto-paper-harvester

./: .env.example  .gitignore  README.md  download_filtered_transition_papers.py  plot_latest.py  plot_smoke.py  pyproject.toml  test_mcp.py  test_mcp_stdio.py
.claude/: settings.local.json
.claude/skills/paper-download/: DOI_EXAMPLES.md  SKILL.md
.claude/skills/paper-download/scripts/: download_by_doi.py  download_multiple_dois.py
auto_paper_download/: __init__.py  __main__.py  clients.py  downloader.py  mcp_server.py  supplements.py
tests/: test_downloader.py
